--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .App{
   background-color: rgb(34, 34, 34);
@@ -8,7 +8,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 .stage{
   background-color: rgb(61, 61, 61);
@@ -17,7 +17,7 @@ body{
   align-items: center;
   width: 200px;
   height: 200px;
-  margin: 20px;
+  margin: 10px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
